--- a/Sticky Navbar/style.css
+++ b/Sticky Navbar/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 
 * {
   box-sizing: border-box;
@@ -7,7 +8,8 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  color: #222;
   padding-bottom: 50px;
 }
 
@@ -16,24 +18,61 @@ body {
   margin: 0 auto;
 }
 
+nav {
+  position: fixed;
+  background-color: #222;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: all 0.7s ease-in-out;
+}
+
 nav .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  transition: all 0.7s ease-in-out;
+}
 
+.nav a {
+  color: #fff;
+  text-decoration: none;
+  padding: 7px 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav.active {
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.nav.active a {
+  color: #000;
+}
+
+.nav.active .container {
+  padding: 10px 0;
+}
+
+.nav a.current,
+.nav a:hover {
+  color: #c0392b;
+  font-weight: bold;
 }
 
 .container ul {
   display: flex;
   list-style-type: none;
   align-items: center;
-  list-style-type: none;
+  justify-content: center;
 }
 
 .container ul li {
-  margin: 0 10px;
+  margin: 0 15px;
 }
 .container ul li:last-child {
-  margin: 0 0 0 10px;
+  margin: 0 0 0 15px;
 }
 
 .hero {
