--- a/Double vertical/style.css
+++ b/Double vertical/style.css
@@ -21,6 +21,10 @@ body {
 .left-slide {
   width: 35%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform .5s ease-in;
 }
 
 .left-slide > div {
@@ -45,6 +49,8 @@ body {
   top: 0;
   left: 35%;
   width: 100%;
+  transition: transform .5s ease-in;
+
 }
 
 .right-slide > div {
