--- a/Toast Notification/style.css
+++ b/Toast Notification/style.css
@@ -15,3 +15,40 @@ body {
   overflow: hidden;
   margin: 0;
 }
+
+.btn {
+  background: #fff;
+  color: rebeccapurple;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 1rem;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:focus{
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.97);
+}
+
+#toasts {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.toast {
+  background-color: #fff;
+  color: rebeccapurple;
+  font-family: inherit;
+  border-radius: 15px;
+  padding: 1rem 2rem;
+  margin: 0.5rem;
+}
