--- a/Github Profiles/style.css
+++ b/Github Profiles/style.css
@@ -20,6 +20,7 @@ body {
 .user-form {
   width: 100%;
   max-width: 700px;
+  margin-bottom: 2rem;
 }
 
 .user-form input {
@@ -66,10 +67,6 @@ body {
   margin-left: 2rem;
 }
 
-.user-info {
-  margin-top: 0;
-}
-
 .user-info ul {
   display: flex;
   list-style-type: none;
@@ -86,4 +83,27 @@ body {
 .user-info ul li strong {
   font-size: 0.9rem;
   margin-right: 0.5rem;
+}
+
+.repos {
+  text-decoration: none;
+  color: #fff;
+  background-color: #212a72;
+  font-size: 0.7rem;
+  padding: 0.25rem 0.5rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: inline-block;
+}
+
+@media (max-width: 500px) {
+  .card {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .user-form {
+    max-width: 400px;
+  }
 }
