--- a/Github Profiles/style.css
+++ b/Github Profiles/style.css
@@ -93,6 +93,7 @@ body {
 .user-info ul li strong {
   font-size: 0.9rem;
   margin-left:0.5rem;
+  margin-right: 0.5rem;
 }
 
 .user-info ul li strong:first-child {
